--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vite-react-typescript-starter",
-  "homepage": "https://vipji.github.io/oopCC/",
+  "homepage": "https://vipji.github.io/appV1/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
